--- a/src/kaizen/LoginScreen.fxml
+++ b/src/kaizen/LoginScreen.fxml
@@ -12,12 +12,12 @@
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@Images/LoginScreenImage.jpg" />
+            <Image url="@Resources/LoginScreenImage.jpg" />
          </image>
       </ImageView>
       <ImageView fitHeight="400.0" fitWidth="400.0" layoutX="159.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@Images/KaizenInnovationsColour.png" />
+            <Image url="@Resources/KaizenInnovationsColour.png" />
          </image>
       </ImageView>
       <Label alignment="CENTER" layoutX="270.0" layoutY="288.0" prefHeight="50.0" prefWidth="250.0" text="Better every day." textAlignment="CENTER" AnchorPane.leftAnchor="225.0" AnchorPane.topAnchor="288.0">
