--- a/src/kaizen/RegisterScreen.fxml
+++ b/src/kaizen/RegisterScreen.fxml
@@ -8,17 +8,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Images/LoginScreenImage.jpg" />
+            <Image url="@Resources/LoginScreenImage.jpg" />
          </image>
       </ImageView>
       <ImageView fitHeight="400.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@Images/KaizenInnovationsColour.png" />
+            <Image url="@Resources/KaizenInnovationsColour.png" />
          </image>
       </ImageView>
       <Label alignment="CENTER" prefHeight="50.0" prefWidth="250.0" text="Welcome to Kaizen!" AnchorPane.leftAnchor="225.0" AnchorPane.topAnchor="288.0">
