--- a/src/kaizen/RegisterScreen.fxml
+++ b/src/kaizen/RegisterScreen.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -21,17 +20,17 @@
             <Image url="@Images/KaizenInnovationsColour.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" prefHeight="50.0" prefWidth="250.0" text="Welcome to Kaizen!" AnchorPane.leftAnchor="225.0" AnchorPane.topAnchor="288.0">
+      <Label alignment="CENTER" layoutX="213.0" layoutY="200.0" prefHeight="50.0" prefWidth="250.0" text="Welcome to Kaizen!" AnchorPane.leftAnchor="213.0" AnchorPane.topAnchor="200.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
       </Label>
-      <TextField layoutX="204.0" layoutY="391.0" prefHeight="50.0" prefWidth="550.0" promptText="Choose your username" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="365.0">
+      <TextField layoutX="75.0" layoutY="373.0" prefHeight="50.0" prefWidth="550.0" promptText="Email" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="373.0">
          <font>
-            <Font size="30.0" />
+            <Font name="Calibri Light" size="30.0" />
          </font>
       </TextField>
-      <PasswordField prefHeight="50.0" prefWidth="550.0" promptText="Choose your password" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="445.0">
+      <PasswordField layoutX="75.0" layoutY="449.0" prefHeight="50.0" prefWidth="550.0" promptText="Choose your password" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="449.0">
          <font>
             <Font name="Calibri Light" size="30.0" />
          </font>
@@ -51,5 +50,15 @@
             <Font name="Calibri Light" size="30.0" />
          </font>
       </Button>
+      <TextField layoutX="75.0" layoutY="298.0" prefHeight="55.0" prefWidth="243.0" promptText="First name">
+         <font>
+            <Font name="Calibri Light" size="30.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="387.0" layoutY="298.0" prefHeight="55.0" prefWidth="227.0" promptText="Last name">
+         <font>
+            <Font name="Calibri Light" size="30.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
