--- a/src/kaizen/Timesheets.fxml
+++ b/src/kaizen/Timesheets.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.media.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
@@ -8,8 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="1080.0" prefWidth="1920.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="kaizen.TimesheetsController">
+<AnchorPane id="AnchorPane" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.TimesheetsController">
    <children>
       <VBox layoutX="10.0" layoutY="10.0" prefHeight="1080.0" prefWidth="325.0" styleClass="vbox-bar" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -53,6 +53,96 @@
       <Button layoutX="10.0" layoutY="670.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="SIGN OUT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
          <font>
             <Font size="20.0" />
+         </font>
+      </Button>
+      <Text layoutX="685.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What did you spend time on today?">
+         <font>
+            <Font size="48.0" />
+         </font>
+      </Text>
+      <Group layoutX="780.0" layoutY="612.0" />
+      <GridPane layoutX="544.0" layoutY="203.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1008.401611328125" minWidth="10.0" prefWidth="353.16534423828125" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="811.97509765625" minWidth="10.0" prefWidth="380.83465576171875" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="607.9150390625" minWidth="10.0" prefWidth="377.299560546875" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="119.0" minHeight="10.0" prefHeight="113.81329345703125" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="113.28900146484375" minHeight="10.0" prefHeight="101.18670654296875" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <RadioButton mnemonicParsing="false" prefHeight="96.0" prefWidth="207.0" text="Daily" GridPane.rowIndex="1">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </RadioButton>
+            <RadioButton mnemonicParsing="false" prefHeight="119.0" prefWidth="1086.0" text="Relationships" GridPane.columnIndex="1">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </RadioButton>
+            <RadioButton mnemonicParsing="false" prefHeight="96.0" prefWidth="207.0" text="Relaxation" GridPane.columnIndex="2">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </RadioButton>
+            <RadioButton mnemonicParsing="false" prefHeight="96.0" prefWidth="207.0" text="Wellness" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </RadioButton>
+            <RadioButton mnemonicParsing="false" prefHeight="96.0" prefWidth="207.0" text="Projects" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </RadioButton>
+            <RadioButton mnemonicParsing="false" prefHeight="96.0" prefWidth="207.0" text="Work">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </RadioButton>
+         </children>
+      </GridPane>
+      <TextField layoutX="862.0" layoutY="485.0" prefHeight="75.0" prefWidth="287.0" promptText="Enter activity start time">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="866.0" layoutY="575.0" prefHeight="75.0" prefWidth="287.0" promptText="Enter activity end time">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </TextField>
+      <Text layoutX="642.0" layoutY="693.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time spent:">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <TextField layoutX="869.0" layoutY="665.0" prefHeight="75.0" prefWidth="292.0" promptText="Time spent on activity">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </TextField>
+      <Text layoutX="547.0" layoutY="533.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What time did you start?">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <Text layoutX="550.0" layoutY="620.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What time did you end?">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <TextArea layoutX="585.0" layoutY="847.0" prefHeight="72.0" prefWidth="680.0" promptText="Description of activity" />
+      <Text layoutX="568.0" layoutY="816.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Describe your activity:">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <Button layoutX="931.0" layoutY="992.0" mnemonicParsing="false" text="Submit">
+         <font>
+            <Font size="24.0" />
          </font>
       </Button>
    </children>
