--- a/src/kaizen/KanbanBoard.fxml
+++ b/src/kaizen/KanbanBoard.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
@@ -11,8 +12,8 @@
 
 <AnchorPane id="AnchorPane" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="218.0" layoutY="31.0" prefHeight="100.0" prefWidth="700.0" styleClass="small-label" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="100.0" />
-      <Label layoutX="208.0" layoutY="21.0" prefHeight="100.0" prefWidth="400.0" styleClass="large-label" stylesheets="@stylesheet.css" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="25.0" />
+      <Label layoutX="218.0" layoutY="31.0" prefHeight="100.0" prefWidth="700.0" styleClass="small-label" stylesheets="@stylesheet.css" text="What would you like to do today?" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="100.0" />
+      <Label layoutX="350.0" layoutY="26.0" prefHeight="100.0" prefWidth="400.0" styleClass="large-label" stylesheets="@stylesheet.css" text="Welcome" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="26.0" />
       <VBox prefHeight="1080.0" prefWidth="325.0" styleClass="vbox-bar" stylesheets="@stylesheet.css" AnchorPane.topAnchor="0.0" />
       <ImageView fitHeight="325.0" fitWidth="325.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -49,5 +50,31 @@
             <Font name="Calibri Light" size="20.0" />
          </font>
       </ToggleButton>
+      <FlowPane layoutX="431.0" layoutY="217.0" prefHeight="790.0" prefWidth="1309.0">
+         <children>
+            <Pane prefHeight="790.0" prefWidth="327.0">
+               <children>
+                  <Label layoutX="80.0" layoutY="14.0" styleClass="small-label" stylesheets="@stylesheet.css" text="Today's Tasks" textAlignment="CENTER" />
+               </children>
+            </Pane>
+            <Pane prefHeight="790.0" prefWidth="327.0">
+               <children>
+                  <Label layoutX="54.0" layoutY="14.0" styleClass="small-label" stylesheets="@stylesheet.css" text="Completed Today" textAlignment="CENTER" />
+               </children>
+            </Pane>
+            <Pane prefHeight="790.0" prefWidth="327.0">
+               <children>
+                  <Label layoutX="53.0" layoutY="14.0" styleClass="small-label" stylesheets="@stylesheet.css" text="Tomorrow's Tasks" textAlignment="CENTER" />
+               </children>
+            </Pane>
+            <Pane prefHeight="790.0" prefWidth="327.0">
+               <children>
+                  <Label layoutX="19.0" layoutY="14.0" styleClass="small-label" stylesheets="@stylesheet.css" text="Tasks Over Next 7 Days" textAlignment="CENTER" />
+               </children>
+            </Pane>
+         </children>
+      </FlowPane>
+      <ToggleButton layoutX="1163.0" layoutY="125.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="268.0" text="Do Date Mode" />
+      <ToggleButton layoutX="1455.0" layoutY="125.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="268.0" text="Due Date Mode" />
    </children>
 </AnchorPane>
