--- a/src/kaizen/Timesheets.fxml
+++ b/src/kaizen/Timesheets.fxml
@@ -145,5 +145,10 @@
             <Font size="24.0" />
          </font>
       </Button>
+      <Button layoutX="762.0" layoutY="993.0" mnemonicParsing="false" text="Back">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
