--- a/src/kaizen/Timesheets.fxml
+++ b/src/kaizen/Timesheets.fxml
@@ -116,8 +116,9 @@
                   </GridPane>
                   <GridPane layoutX="337.0" layoutY="392.0" prefHeight="367.0" prefWidth="937.0" vgap="10.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="618.9674682617188" minWidth="10.0" prefWidth="355.43267822265625" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="823.744384765625" minWidth="10.0" prefWidth="581.5673217773438" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="618.9674682617188" minWidth="10.0" prefWidth="359.553466796875" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="823.744384765625" minWidth="10.0" prefWidth="538.3817138671875" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="823.744384765625" minWidth="10.0" prefWidth="103.6182861328125" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -141,16 +142,6 @@
                               <Font size="24.0" />
                            </font>
                         </Text>
-                        <TextField prefHeight="45.0" prefWidth="714.0" promptText="Enter start time" GridPane.columnIndex="1">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                        </TextField>
-                        <TextField prefHeight="45.0" prefWidth="566.0" promptText="Enter end time" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                        </TextField>
                         <Label text="Duration of Activity" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <font>
                               <Font size="24.0" />
@@ -164,7 +155,7 @@
                               <Insets top="10.0" />
                            </GridPane.margin>
                         </Text>
-                        <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Enter activity description" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <TextArea prefHeight="119.0" prefWidth="598.0" promptText="Enter activity description" GridPane.columnIndex="1" GridPane.rowIndex="3">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -172,6 +163,46 @@
                               <Insets top="10.0" />
                            </GridPane.margin>
                         </TextArea>
+                        <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" />
+                        <ChoiceBox layoutX="348.0" layoutY="30.0" prefWidth="150.0" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets left="190.0" />
+                           </GridPane.margin>
+                        </ChoiceBox>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text=":" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets left="165.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Text>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text=":" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Text>
+                        <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </ChoiceBox>
+                        <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="190.0" />
+                           </GridPane.margin>
+                        </ChoiceBox>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text=":" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="165.0" />
+                           </GridPane.margin>
+                        </Text>
                      </children>
                   </GridPane>
                   <Button layoutX="690.0" layoutY="815.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="163.0" text="Submit">
