dailylearnings fxml changes

--- a/src/kaizen/DailyLearnings.fxml
+++ b/src/kaizen/DailyLearnings.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" styleClass="vbox-bar" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="vbox-bar" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="menu-panel" stylesheets="@stylesheet.css" BorderPane.alignment="CENTER">
          <center>
@@ -47,17 +48,16 @@
          </top>
       </BorderPane>
    </left>
-   <right>
+   <center>
       <BorderPane prefHeight="200.0" prefWidth="1595.0" BorderPane.alignment="CENTER">
          <left>
-            <GridPane prefHeight="1059.0" prefWidth="984.0" BorderPane.alignment="CENTER">
+            <GridPane prefHeight="994.0" prefWidth="820.0" BorderPane.alignment="CENTER">
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="636.6666870117188" minWidth="10.0" prefWidth="50.66668701171875" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="852.6666564941406" minWidth="10.0" prefWidth="746.333251953125" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="364.3333740234375" minWidth="10.0" prefWidth="162.666748046875" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="636.6666870117188" minWidth="0.0" prefWidth="29.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="1154.0" minWidth="10.0" prefWidth="632.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="670.0" minWidth="10.0" prefWidth="188.0" />
               </columnConstraints>
               <rowConstraints>
-                  <RowConstraints maxHeight="283.33332347869873" minHeight="10.0" prefHeight="150.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="283.33332347869873" minHeight="10.0" prefHeight="150.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="489.33331298828125" minHeight="0.0" prefHeight="84.33334350585938" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="752.0" minHeight="0.0" prefHeight="57.0" vgrow="SOMETIMES" />
@@ -68,28 +68,28 @@
                   <RowConstraints maxHeight="687.3333740234375" minHeight="0.0" prefHeight="111.66668701171875" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Your daily learnings" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Your daily learnings" GridPane.columnIndex="1">
                      <font>
-                        <Font name="Arial" size="48.0" />
+                        <Font name="Arial" size="36.0" />
                      </font>
                      <GridPane.margin>
                         <Insets left="40.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="What did you learn today?" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="What did you learn today?" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="40.0" />
                      </GridPane.margin>
                      <font>
-                        <Font size="36.0" />
+                        <Font size="18.0" />
                      </font>
                   </Text>
-                  <ComboBox fx:id="answerOne" prefHeight="31.0" prefWidth="515.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <ComboBox fx:id="answerOne" prefHeight="31.0" prefWidth="515.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="40.0" />
                      </GridPane.margin>
                   </ComboBox>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="What could you have done better today?" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="What could you have done better today?" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <font>
                         <Font size="36.0" />
                      </font>
@@ -97,12 +97,12 @@
                         <Insets left="40.0" />
                      </GridPane.margin>
                   </Text>
-                  <ComboBox fx:id="answerTwo" prefHeight="31.0" prefWidth="515.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                  <ComboBox fx:id="answerTwo" prefHeight="31.0" prefWidth="515.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets left="40.0" />
                      </GridPane.margin>
                   </ComboBox>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date of learnings" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date of learnings" GridPane.columnIndex="1" GridPane.rowIndex="6">
                      <font>
                         <Font size="36.0" />
                      </font>
@@ -110,12 +110,12 @@
                         <Insets left="40.0" top="-300.0" />
                      </GridPane.margin>
                   </Text>
-                  <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="7">
+                  <DatePicker fx:id="datePick" GridPane.columnIndex="1" GridPane.rowIndex="6">
                      <GridPane.margin>
                         <Insets left="40.0" top="-175.0" />
                      </GridPane.margin>
                   </DatePicker>
-                  <Label fx:id="confirmEntry" text="Successfully updated learnings!" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                  <Label fx:id="confirmEntry" text="Successfully updated learnings!" GridPane.columnIndex="1" GridPane.rowIndex="6">
                      <GridPane.margin>
                         <Insets bottom="-200.0" left="100.0" />
                      </GridPane.margin>
@@ -123,9 +123,9 @@
                         <Font size="36.0" />
                      </font>
                   </Label>
-                  <Button fx:id="addLearnings" mnemonicParsing="false" onAction="#updateAnswers" text="Add learnings" GridPane.columnIndex="2" GridPane.rowIndex="7">
+                  <Button fx:id="addLearning" mnemonicParsing="false" onAction="#updateAnswers" text="Add learnings" GridPane.columnIndex="2" GridPane.rowIndex="6">
                      <GridPane.margin>
-                        <Insets left="30.0" />
+                        <Insets bottom="200.0" />
                      </GridPane.margin>
                      <font>
                         <Font size="18.0" />
@@ -133,6 +133,44 @@
                   </Button>
                </children>
             </GridPane>
-         </left></BorderPane>
-   </right>
+         </left>
+         <right>
+            <GridPane prefHeight="534.0" prefWidth="622.0" BorderPane.alignment="CENTER">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="291.0" minHeight="10.0" prefHeight="197.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="348.0" minHeight="10.0" prefHeight="348.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="915.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="915.0" minHeight="10.0" prefHeight="216.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="400.0" minHeight="2.0" prefHeight="356.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Summary of learnings">
+                     <font>
+                        <Font name="Arial" size="48.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Text>
+                  <ImageView fitHeight="144.0" fitWidth="154.0" pickOnBounds="true" preserveRatio="true">
+                     <GridPane.margin>
+                        <Insets left="550.0" />
+                     </GridPane.margin>
+                  </ImageView>
+                  <TableView maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="336.0" prefWidth="726.0" GridPane.rowIndex="1">
+                    <columns>
+                      <TableColumn prefWidth="313.0" text="Things you did well" />
+                      <TableColumn minWidth="0.0" prefWidth="283.0" text="Times entered" />
+                    </columns>
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </TableView>
+               </children>
+            </GridPane>
+         </right></BorderPane>
+   </center>
 </BorderPane>
